<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Ulti Analytics</string>
    <string name="undefined">UNDEFINED</string>
    <string name="zero">0</string>
    <string name="blank"></string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">ImageDescription</string>
    <string name="fake_date">April 99, 1999</string>
    <string name="fake_score">6&#8211;8 (them)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="common_retry">Retry</string>
    <string name="common_today">Today</string>
    <string name="common_versus_short">v.</string>
    <string name="common_our">our</string>
    <string name="common_us">us</string>
    <string name="common_them">them</string>
    <string name="common_tied">tied</string>
    <string name="common_hangtime_seconds">%1$s sec</string>
    <string name="common_o_line">O-Line</string>
    <string name="common_d_line">D-Line</string>
    <string name="common_unknown_player">UNKNOWN</string>
    <string name="point_description_current">Current</string>
    <string name="point_description_current_point">Current\nPoint</string>
    <string name="line_player_partial">%1$s (partial)</string>
    <string name="event_description_our_team">Our team</string>
    <string name="event_description_pass">%1$s pass</string>
    <string name="event_description_pass_to">Pass to %1$s</string>
    <string name="event_description_pass_from_to">%1$s to %2$s</string>
    <string name="event_description_drop">%1$s drop</string>
    <string name="event_description_drop_from">%1$s pass dropped</string>
    <string name="event_description_drop_to">%1$s dropped pass</string>
    <string name="event_description_drop_from_to">%1$s dropped from %2$s</string>
    <string name="event_description_throwaway">%1$s throwaway</string>
    <string name="event_description_stalled">%1$s was stalled</string>
    <string name="event_description_penalized">%1$s penalized</string>
    <string name="event_description_callahaned">%1$s callahan\'d</string>
    <string name="event_description_o_goal">%1$s goal</string>
    <string name="event_description_o_goal_from">%1$s pass for goal</string>
    <string name="event_description_o_goal_from_to">Goal (%2$s to %3$s)</string>
    <string name="event_description_pull">%1$s pull%2$s</string>
    <string name="event_description_pull_from">Pull from %1$s%2$s</string>
    <string name="event_description_pull_seconds_short">%1$s sec</string>
    <string name="event_description_pull_ob">%1$s OB pull</string>
    <string name="event_description_pull_ob_from">OB pull from %1$s</string>
    <string name="event_description_opponent_goal">Opponent goal</string>
    <string name="event_description_opponent_goal_by">%1$s goal</string>
    <string name="event_description_opponent_throwaway">Opponent throwaway</string>
    <string name="event_description_opponent_throwaway_by">%1$s throwaway</string>
    <string name="event_description_d">%1$s D</string>
    <string name="event_description_d_by">D by %1$s</string>
    <string name="event_description_callahan">%1$s callahan</string>
    <string name="event_description_callahan_by">Callahan by %1$s</string>
    <string name="event_description_end_of_first_quarter">End of 1st Qtr</string>
    <string name="event_description_end_of_third_quarter">End of 3rd Qtr</string>
    <string name="event_description_halftime">HalfTime</string>
    <string name="event_description_game_over">Game Over</string>
    <string name="event_description_end_of_fourth_quarter">End of 4th Qtr</string>
    <string name="event_description_end_of_overtime">End of an overtime</string>
    <string name="title_activity_teams">Teams</string>
    <string name="title_activity_team">Team</string>
    <string name="title_activity_players">Players</string>
    <string name="title_activity_player">Player</string>
    <string name="title_activity_games">Games</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_game_new">New Game</string>
    <string name="title_activity_game_action">Action</string>
    <string name="title_activity_events">Game Events</string>
    <string name="title_activity_stats">Player Statistics</string>
    <string name="title_activity_settings">Website Settings</string>
    <string name="title_activity_events_in_action">Events</string>
    <string name="title_activity_twitter">Tweets</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_wind">Wind</string>
    <string name="title_activity_timestamp">Game Start Time</string>
	<string name="title_activity_developer">Troubleshooting</string>
    <string name="menuitem_team_add">Add Team</string>
    <string name="menuitem_player_add">Add Player</string>
    <string name="menuitem_game_add">New Game</string>
    <string name="menuitem_team_download">Download</string>
    <string name="menuitem_upload">Upload</string>
    <string name="menuitem_settings">Website Settings</string>
    <string name="menuitem_twitter_logout">Signout</string>
    <string name="menuitem_twitter">Twitter</string>
	<string name="menuitem_players">Edit Players</string>
    <string name="menuitem_support">Support</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_teams">Teams</string>
    <string name="action_games">Games</string>
    <string name="action_action">Action</string>
    <string name="action_line">Line</string>
    <string name="alert_team_confirm_delete_title">Confirm Team Delete</string>
    <string name="alert_team_confirm_delete_message">Do you really want to delete team \"%1$s\"?</string>
    <string name="alert_team_delete_not_allowed_title">Delete Not Allowed</string>
    <string name="alert_team_delete_not_allowed_message">You cannot delete this team because it is the only team on this device.  Create another team and then retry.</string>
    <string name="alert_team_name_required_title">Team Name Required</string>
    <string name="alert_team_name_required_message">Please enter a name for this team.</string>
    <string name="alert_team_duplicate_name_title">Duplicate Name</string>
    <string name="alert_team_duplicate_name_message">Each team must have a unique name.  Please enter a different name for this team.</string>
    <string name="alert_team_no_games_without_players_title">Team Not Ready Yet</string>
    <string name="alert_team_no_games_without_players_message">Before adding games for a team you must provide a team name and at least a few players.</string>
    <string name="alert_player_name_required_title">Player Name Required</string>
    <string name="alert_player_name_required_message">Please enter a name for this player.</string>
    <string name="alert_player_duplicate_name_title">Duplicate Name</string>
    <string name="alert_player_duplicate_name_message">Each player must have a unique name.  Please enter a different name for this player.</string>
    <string name="alert_player_confirm_delete_title">Confirm Player Delete</string>
    <string name="alert_player_confirm_delete_message">Do you really want to delete player \"%1$s\"?</string>
    <string name="alert_game_opponent_required_title">Opponent Name Required</string>
    <string name="alert_game_opponent_required_message">Please enter a name for the opponent</string>
    <string name="alert_game_confirm_delete_title">Confirm Game Delete</string>
    <string name="alert_game_confirm_delete_message">Do you really want to delete game vs. \"%1$s\"?</string>
    <string name="alert_game_confirm_save_title">Save Changes?</string>
    <string name="alert_game_confirm_save_message">You made changes to the game. Should they be saved before continuing?</string>
    <string name="alert_line_mismatched_substitutions_title">Mismatched Substitutions</string>
    <string name="alert_line_mismatched_substitutions_message">You have chosen to do a substitution but the line now has more or less players than when you started</string>
    <string name="alert_line_substitutions_no_change_title">No Changes Made</string>
    <string name="alert_line_substitutions_no_change_message">You have chosen to do a substitution but no changes have been made on the line.</string>
    <string name="alert_action_halftime_title">Half Time!</string>
    <string name="alert_action_halftime_message_receive">Our team will RECEIVE on the next point</string>
    <string name="alert_action_halftime_message_defend">Our team will DEFEND on the next point</string>
    <string name="alert_action_wind_speed_reminder">REMINDER: check wind speed</string>
    <string name="alert_action_gameover_title">Game Over?</string>
    <string name="alert_action_gameover_probable_message">This game appears to be over.  Please confirm.</string>
    <string name="alert_action_gameover_message">Please confirm that the game is over</string>
    <string name="alert_action_gameover_yes">Yes, done</string>
    <string name="alert_action_gameover_no">No, not yet</string>
    <string name="alert_event_invalid_hangtime_title">Invalid Hangtime</string>
    <string name="alert_event_invalid_hangtime_message">The hangtime entered does not appear valid</string>
    <string name="alert_timeout_which_half_title">Timeout During Halftime</string>
    <string name="alert_timeout_which_half_message">We are at halftime. To which half should timeout be applied?</string>
    <string name="alert_timeout_undo_title">Timeout Undo</string>
    <string name="alert_timeout_undo_confirm_message">Please confirm undo of the last timeout</string>
    <string name="label_player_position">Position:</string>
    <string name="label_player_gender">Gender:</string>
    <string name="label_game_action_pull_instructions_begin">Disc pulled&#8230;</string>
    <string name="label_game_action_pull_instructions_end">&#8230;tap a button when:</string>
    <string name="label_timeouts_quota">Game Quota</string>
    <string name="label_timeouts_per_half">Per Half:</string>
    <string name="label_timeouts_floaters">Floaters:</string>
    <string name="label_timeouts_taken">Taken</string>
    <string name="label_timeouts_first_half">1st Half:</string>
    <string name="label_timeouts_second_half">2nd Half:</string>
    <string name="label_timeouts_available">Available now:</string>
    <string name="label_twitter_auto_tweet">Auto-Tweet Settings</string>
    <string name="placeholder_player_name">Player Name</string>
    <string name="placeholder_player_number">Player Number</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_save_and_add">Save, New</string>
    <string name="button_action_unknown_player">UNKNOWN</string>
    <string name="button_action_catch">Catch</string>
    <string name="button_action_drop">Drop</string>
    <string name="button_action_goal">Goal</string>
    <string name="button_action_de">D</string>
    <string name="button_action_pull">Pull</string>
    <string name="button_pull_caught">Caught/Landed</string>
    <string name="button_pull_caught_no_time">Caught/Landed - no hang time</string>
    <string name="button_pull_out_of_bounds">Out of Bounds</string>
    <string name="button_timeouts_take_timeout">Timeout</string>
    <string name="button_timeouts_undo">Undo Last Timeout</string>
    <string name="radio_player_position_cutter">Cutter</string>
    <string name="radio_player_position_handler">Handler</string>
    <string name="radio_player_position_any">Any</string>
    <string name="radio_player_gender_male">Male</string>
    <string name="radio_player_gender_female">Female</string>
    <string name="radio_auto_tweet_none">None</string>
    <string name="radio_auto_tweet_min">Goals</string>
    <string name="radio_auto_tweet_max">Goals + Turnovers</string>
</resources>