<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"
        android:text="@string/label_game_action_pull_instructions_begin" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:gravity="center"        
        android:text="@string/label_game_action_pull_instructions_end" />

    <Button
        android:id="@+id/inboundMeasureHangTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pull_caught" />
    
    <Button
        android:id="@+id/inboundNoHangTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pull_caught_no_time" />
    
    <Button
        android:id="@+id/outOfBoundsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_pull_out_of_bounds" />
    
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" />

</LinearLayout>
