<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <com.summithillsoftware.ultimate.ui.game.GameActionInitiatorPlayerButton
        android:id="@+id/initiatorPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameActionInitiatorPlayer"
        android:text="@string/button_action_unknown_player" />

    <ImageView
        android:id="@+id/passingDirectionArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
		android:layout_marginRight="4dp"        
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/image_description"
        android:src="@drawable/arrow_pass_direction" />

    <com.summithillsoftware.ultimate.ui.game.GameActionButton
        android:id="@+id/catchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameAction"
        android:text="@string/button_action_catch" />

    <com.summithillsoftware.ultimate.ui.game.GameActionButton
        android:id="@+id/dropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameAction"
        android:text="@string/button_action_drop" />

    <com.summithillsoftware.ultimate.ui.game.GameActionButton
        android:id="@+id/goalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameAction"
        android:text="@string/button_action_goal" />

    <com.summithillsoftware.ultimate.ui.game.GameActionButton
        android:id="@+id/pullButton"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameAction"
        android:text="@string/button_action_pull" />
        
    <com.summithillsoftware.ultimate.ui.game.GameActionButton
        android:id="@+id/deButton"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/buttonGameAction"
        android:text="@string/button_action_de" />

</LinearLayout>

