<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ultimate="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:title="@string/menuitem_game_add"
        ultimate:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/download_cloud_white"
        android:orderInCategory="110"
        android:title="@string/menuitem_team_download"
        ultimate:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_gear"
        android:orderInCategory="200"
        android:title="@string/menuitem_settings"
        ultimate:showAsAction="never|withText"/>
    
    <item
        android:id="@+id/action_support"
        android:orderInCategory="400"
        android:title="@string/menuitem_support"
        ultimate:showAsAction="never|withText"/>

</menu>