<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ultimate="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:title="@string/menuitem_team_add"
        ultimate:showAsAction="always|withText"/>
    
    <item
        android:id="@+id/action_download"
        android:orderInCategory="110"
        ultimate:showAsAction="always|withText"
        android:title="@string/menuitem_team_download" 
        android:icon="@drawable/download_cloud_white"
        />   
        
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        ultimate:showAsAction="never|withText"
        android:title="@string/menuitem_settings" 
        android:icon="@drawable/ic_action_gear"
        />      
        
    <item
        android:id="@+id/action_support"
        android:orderInCategory="400"
        ultimate:showAsAction="never|withText"
        android:title="@string/menuitem_support" />      

</menu>
