<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ultimate="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_action"
        android:icon="@drawable/game_action"
        android:orderInCategory="50"
        android:title="@string/action_action"
        ultimate:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_upload"
        android:icon="@drawable/ic_action_upload"
        android:orderInCategory="35"
        android:title="@string/menuitem_upload"
        ultimate:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/trash_white"
        android:orderInCategory="50"
        android:title="@string/action_delete"
        ultimate:showAsAction="ifRoom|withText"/>

</menu>